# cyclic-cmake

libs/: CMakeLists.txt  a-config.cmake  b-config.cmake
use/: CMakeLists.txt
